Fix misalignment of social media links

--- a/static/resources/css/base.css
+++ b/static/resources/css/base.css
@@ -290,6 +290,7 @@ footer {
     list-style: none;
     justify-content: center;
     margin-bottom: 30px;
+    padding: 0;
 }
 
 .social-media-item:not(:last-of-type) {
